[gd_scene load_steps=2 format=3 uid="uid://settings_scene_001"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Master Volume: 100%"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="SFXVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume: 100%"
horizontal_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="MusicVolumeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Music Volume: 100%"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 100.0
tick_count = 11
ticks_on_borders = true

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="value_changed" from="VBoxContainer/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
